--- a/style/global.css
+++ b/style/global.css
@@ -31,7 +31,7 @@
 
 	.conf-container-wrapper {
 		max-width: 700px;
-		margin: 0 auto;
+		margin: 60px auto;
 	}
 	/* ////////////////////////////////////////////////////////////////////// */
 	
